# learn-opengl

./: CMakeLists.txt  Journal.md  LICENSE  README.md  build.sh  conanfile.txt
patched-dependencies/glfw/: conanfile.py
src/: CMakeLists.txt  main.cpp
src/Graphics/: CMakeLists.txt  Camera2d.h  Graphics.h  IEngine.h  IFactory.h  IImage.h  ILibPngWrapper.h  ITileAtlas.h  ITileMap.h  Image.cpp  Image.h  LibPngWrapper.h  ObjectInstance2d.h  PngImage.cpp  PngImage.h  TextureHandle.h
src/Graphics/OpenGL/: Engine.cpp  Engine.h  Factory.cpp  Factory.h  GlfwException.cpp  GlfwException.h  GlfwWrapper.cpp  GlfwWrapper.h  IGlfwWrapper.h  ILibraryWrapper.h  IOpenGLWindow.h  IOpenGLWrapper.h  IShader.h  IShaderProgram.h  ITexture.h  ITileMapShaderProgram.h  IUnitQuadVertexArray.h  IVertexArray.h  LibraryWrapper.cpp  LibraryWrapper.h  OpenGLHelpers.cpp  OpenGLHelpers.h  OpenGLWrapper.h  Shader.cpp  Shader.h  Shader.ipp  ShaderProgram.cpp  ShaderProgram.h  Simple3dVertex.h  Sprite.h  Texture.cpp  Texture.h  TileAtlas.h  TileMap.cpp  TileMap.h  TileMapShaderProgram.cpp  TileMapShaderProgram.h  UniqueHandle.h  UnitQuadVertexArray.cpp  UnitQuadVertexArray.h  (+3 more)
src/GraphicsIntegrationTests/: CMakeLists.txt  ImageTests.cpp  PngImageTests.cpp  TileMapTests.cpp  main_test.cpp
src/GraphicsIntegrationTests/OpenGL/: Pixel.cpp  Pixel.h  ShaderProgramTests.cpp  ShaderTests.cpp  TestHelpers.cpp  TestHelpers.h  TextureTests.cpp  VertexArrayTests.cpp  ViewportCapture.cpp  ViewportCapture.h  WindowTests.cpp
src/GraphicsUnitTests/: CMakeLists.txt  FakeImage.h  ImageTests.cpp  MockLibPngWrapper.h  ObjectInstance2dTests.cpp  PngImageTests.cpp  TestHelpers.h
src/GraphicsUnitTests/OpenGL/: MockGlfwWrapper.h  MockLibraryWrapper.h  MockOpenGLWrapper.h  MockShader.h  ShaderProgramTests.cpp  ShaderTests.cpp  TestHelpers.h  TextureTests.cpp  TileMapShaderProgramTests.cpp  VertexArrayTests.cpp  WindowTests.cpp
